--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.3.3",
+    "vue-masonry": "^0.10.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
